[package]
name = "shadercanvas"
version = "0.0.9"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

description = "Shadertoy-like Html-Canvas implemented in Rust-WASM"
repository = "https://github.com/hmeyer/shadercanvas"
readme = "README.md"
keywords = ["shader", "glsl", "webgl", "canvas"]
license = "Apache-2.0 OR MIT"

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-timer = "0.2.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlShader',
]
