[package]
name = "shadercanvas"
version = "0.2.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2024"

description = "Shadertoy-like Html-Canvas implemented in Rust-WASM"
repository = "https://github.com/hmeyer/shadercanvas"
readme = "README.md"
keywords = ["shader", "glsl", "webgl", "canvas"]
license = "Apache-2.0 OR MIT"

[dependencies]
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
web-time = "1.1.0"

[dependencies.web-sys]
version = "0.3.91"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlShader',
]
