[package]
name = "example"
version = "0.0.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
shadercanvas = "0.0.4"
wasm-bindgen = "0.2.83"
log = "0.4"
console_log = { version = "0.2", features = ["color"], optional = true }
web-sys = "0.3.4"

[features]
default = ["console_log"]
