[package]
name = "example"
version = "0.0.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
shadercanvas = { git = "https://github.com/hmeyer/shadercanvas" }
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'MouseEvent',
]