[package]
name = "example"
version = "0.0.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
shadercanvas = { path = ".." }
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"

[dependencies.web-sys]
version = "0.3.91"
features = [
  'Document',
  'HtmlCanvasElement',
  'MouseEvent',
  'Window',
]
